--- a/html/bola.html
+++ b/html/bola.html
@@ -16,6 +16,31 @@
         
         <div class="snowfall"></div>
         <div class="cover"></div>
+        <div class="door door1">
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+        </div>
+        <div class="door door2">
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+        </div>
+        <div class="overdoor"></div>
+        <div class="door door3">
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+            <div class="cristal"></div>
+        </div>
         <div class="bottom">
             <div class="bt1"></div>
             <div class="bt2"></div>
