--- a/html/texto.html
+++ b/html/texto.html
@@ -15,7 +15,7 @@
             <span></span>
         </div>
 
-        <div class="texto">
+        <div class="promo">
             <h2>OS</h2>
             <h2>DESEAMOS</h2>
             <h2>FELIZ</h2>
