--- a/html/texto.html
+++ b/html/texto.html
@@ -15,11 +15,7 @@
             <span></span>
         </div>
 
-<<<<<<< HEAD
-        <div class="texto">
-=======
-        <div class="felicitacion">
->>>>>>> grupo2/jbaldellou
+        <div class="promo">
             <h2>OS</h2>
             <h2>DESEAMOS</h2>
             <h2>FELIZ</h2>
