--- a/html/bola.html
+++ b/html/bola.html
@@ -104,7 +104,7 @@
             <div id="s5"></div>
             <div id="s6"></div>
         
-        <svg1 xmlns="http://www.w3.org/2000/svg">
+        <svg xmlns="http://www.w3.org/2000/svg">
           <pattern id="pattern" width="99" height="70" patternUnits="userSpaceOnUse">
             <path d="m0 67h96V35H0V32h47V0h3v32h49V0H0" />
           </pattern>
@@ -116,8 +116,8 @@
               <feDistantLight azimuth="225" elevation="9" />
             </feDiffuseLighting>
           </filter>
-          <rect width="100%" height="100%" fill="url(#pattern)" filter="url(#filter)" />
-      </svg1>
+          <rect width="50px" height="50px" fill="url(#pattern)" filter="url(#filter)" />
+      </svg>
 
     </div>
 
